# pictionary

./: Dockerfile
backend/: Cargo.toml  rusty-tags.vi
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.svelte  app.css  main.js
