[package]
name = "pictionary"
version = "0.1.0"
authors = ["Bradley J. Spaulding <brad.spaulding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"
listenfd = "0.3"
