[package]
name = "pictionary"
version = "0.1.0"
authors = ["Bradley J. Spaulding <brad.spaulding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2"
actix-web-actors = "2.0"
listenfd = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.6"
env_logger = "0.7"
